# gcdserver-api

./: .env  .gitignore  BUILD_TOOLS_SUMMARY.md  Cargo.toml  DELIVERABLES.txt  DELIVERY_SUMMARY.md  GCD_TOOLS_IMPLEMENTATION.md  HYBRID_APPROACH.md  HYBRID_APPROACH_IMPLEMENTATION.md  HYBRID_APPROACH_QUICK_REFERENCE.md  HYBRID_APPROACH_README.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  KEYCLOAK_MIGRATION.md  KEYCLOAK_SETUP.md  MIGRATION_GUIDE.md  OAUTH2_GUIDE.md  README.md  README_GCD_TOOLS.md
resources/: 00_START_HERE.md  CHAT_EXPORT.md  INDEX.md  README.md  SETUP.md  XML_IMPORT_ARCHITECTURE.md  XML_IMPORT_DELIVERY.md  XML_IMPORT_INDEX.md  XML_IMPORT_QUICK_REF.md  XML_TO_JSON_GUIDE.md  __init__.py  build_gcd_rest.py  examples.py  gcd_build_examples.py  gcd_rest_client.py  gcd_xml_import.py  gcdserver_api_client.py  migration_guide.py  quickstart.py  xml_import_examples.py  xml_to_json_converter.py
src/: db.rs  errors.rs  main.rs  models.rs
src/api/: auth.rs  calibration.rs  configuration.rs  detector_status.rs  gcd.rs  geometry.rs  health.rs  mod.rs  run_metadata.rs  snow_height.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  oauth2.rs
tests/: test_data.rs
