[package]
name = "gcdserver-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "2.15"
mongodb = "2.7"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
validator = { version = "0.16", features = ["derive"] }
jsonwebtoken = "9.2"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"

[[bin]]
name = "gcdserver-api"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
